@@ -1,3 +1,10 @@
+2007-12-06  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* gnome-sudoku/src/lib/gnome_sudoku.py:
+	* gnome-sudoku/src/lib/game_selector.py:
+	* gnome-sudoku/src/lib/timer.py: Make new strings translatable. Patch
+        by Didier Vidal. (Bug #502194)
+
 2007-11-21  Thomas Mills HInkle  <thinkle@gnome.org>
 
 	* gnome-sudoku/src/lib/sudoku.py Don't print tracebacks -- just
